Colaboratory を使用して作成しました

--- a/YouTubelistSCR.ipynb
+++ b/YouTubelistSCR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQyze4CYJnisK/I1cmugYa",
+      "authorship_tag": "ABX9TyNV+6y471vfvcghpc36nTgf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,18 +123,16 @@
         "    api_key = ''\n",
         "\n",
         "    #列表URL\n",
-        "    playlist_url = 'https://www.youtube.com/playlist?list=PLl32tGbAYNEo78QFPFFoqNSnja3jNkyUu'\n",
+        "    playlist_url = 'https://www.youtube.com/playlist?list=PLx71yXUYyUHuS3QZ-4b_Ku2VyHVcKES2X'\n",
         "    playlist_id = playlist_url.split('=')[1]\n",
         "\n",
-        "    \n",
+        "    youtube = build('youtube', 'v3', developerKey=api_key)\n",
         "    videos = get_videos(playlist_id, api_key)\n",
         "\n",
-        "    \n",
         "    workbook = openpyxl.Workbook()\n",
         "    sheet = workbook.active\n",
         "    sheet.title = 'videos'\n",
         "\n",
-        "    \n",
         "    sheet['A1'] = 'title'\n",
         "    sheet['B1'] = 'description'\n",
         "    sheet['C1'] = 'thumbnail_url'\n",
@@ -143,7 +141,6 @@
         "    sheet['F1'] = 'view_count'\n",
         "    sheet['G1'] = 'duration'\n",
         "\n",
-        "    \n",
         "    for i, video in enumerate(videos):\n",
         "        video_id = video[\"snippet\"][\"resourceId\"][\"videoId\"]\n",
         "        video_url = f'https://www.youtube.com/watch?v={video_id}'\n",
@@ -152,32 +149,38 @@
         "            part=\"snippet,statistics,contentDetails\",\n",
         "            id=video_id,\n",
         "        )\n",
-        "        video_details_response = video_details_request.execute()\n",
-        "        video_details = video_details_response[\"items\"][0][\"snippet\"]\n",
+        "        try:\n",
+        "            video_details_response = video_details_request.execute()\n",
+        "            video_details = video_details_response[\"items\"][0][\"snippet\"]\n",
         "\n",
-        "        title = video_details[\"title\"]\n",
-        "        description = video_details[\"description\"]\n",
-        "        thumbnail_url = video_details[\"thumbnails\"][\"default\"][\"url\"]\n",
-        "        published_at = video_details[\"publishedAt\"]\n",
-        "        view_count = video_details_response[\"items\"][0][\"statistics\"][\"viewCount\"]\n",
-        "        duration = video_details_response[\"items\"][0][\"contentDetails\"][\"duration\"]\n",
+        "            title = video_details[\"title\"]\n",
+        "            description = video_details[\"description\"]\n",
+        "            thumbnail_url = video_details[\"thumbnails\"][\"default\"][\"url\"]\n",
+        "            published_at = video_details[\"publishedAt\"]\n",
+        "            view_count = video_details_response[\"items\"][0][\"statistics\"][\"viewCount\"]\n",
+        "            duration = video_details_response[\"items\"][0][\"contentDetails\"][\"duration\"]\n",
         "\n",
-        "        sheet.cell(row=i+2, column=1, value=title)\n",
-        "        sheet.cell(row=i+2, column=2, value=description)\n",
-        "        sheet.cell(row=i+2, column=3, value=thumbnail_url)\n",
-        "        sheet.cell(row=i+2, column=4, value=video_url)\n",
-        "        sheet.cell(row=i+2, column=5, value=published_at)\n",
-        "        sheet.cell(row=i+2, column=6, value=view_count)\n",
-        "        sheet.cell(row=i+2, column=7, value=duration)\n",
+        "            sheet.cell(row=i+2, column=1, value=title)\n",
+        "            sheet.cell(row=i+2, column=2, value=description)\n",
+        "            sheet.cell(row=i+2, column=3, value=thumbnail_url)\n",
+        "            sheet.cell(row=i+2, column=4, value=video_url)\n",
+        "            sheet.cell(row=i+2, column=5, value=published_at)\n",
+        "            sheet.cell(row=i+2, column=6, value=view_count)\n",
+        "            sheet.cell(row=i+2, column=7, value=duration)\n",
+        "        except:\n",
+        "            print(f\"Could not get details for video {i+1}\")\n",
+        "            continue\n",
         "\n",
-        "    \n",
-        "    workbook.save('videos.xlsx')\n",
+        "    vname=input(\"ファイル名を入力してください:\")\n",
+        "    workbook.save(f'{vname}.xlsx')\n",
         "\n",
         "if __name__ == '__main__':\n",
-        "    main()\n"
+        "    main()\n",
+        "\n",
+        "print(\"生成が完了しました\")"
       ],
       "metadata": {
-        "id": "D0ZWJYXUH2WA"
+        "id": "AMJOXvxRX5Zs"
       },
       "execution_count": null,
       "outputs": []
